--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ cython_debug/
                             <button class="btn btn-primary">Add to Cart</button>
                         </div>
                 </div>
+.qodo
